--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,18 @@
 html {
-  font-family: Verdana, sans-serif;
+  font-family: Georgia, serif;
 }
+
+body {
+  margin: 0;
+}
+
+/* BEGIN HEADER STYLING */
 
 header {
   display: flex;
   height: 80px;
   width: 100%;
+  font-family: Verdana, sans-serif;
   font-size: 14px;
   font-weight: bold;
   align-items: center;
@@ -13,4 +20,161 @@ header {
   z-index: 1;
   border-bottom: 1px solid black;
   background-color: white;
+}
+
+
+.SiteNav {
+  padding-right: 40px;
+  /* Possibly set SiteNav to 'display: block;' */
+}
+
+.nav span a {
+  color: black;
+  padding: 20px 10px;
+  display: inline-block;
+}
+
+.myt-logo {
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  flex-grow: 1;
+}
+
+.myt-logo span {
+  color: mediumaquamarine;
+  padding: 10px;
+}
+
+/* END HEADER STYLING */
+
+/* BEGIN BODY STYLING */
+
+main {
+  display: flex;
+  padding-top: 116px;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+.col-large {
+  width: 630px;
+}
+
+.col-medium {
+  width: 300px;
+  margin-left: 32px;
+}
+
+.col-small {
+  width: 240px;
+  margin-left: 32px;
+}
+
+.news1-img {
+  font-weight: bold;
+  font-size: 40px;
+  text-align: left;
+  color: white;
+  background-image: url(../img-story-main.png);
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.news1-img span {
+  margin-left: 20px;
+}
+
+.OtherNews {
+  display: flex;
+  justify-content: space-between;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.NewsBlurb {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  height: 300px;
+}
+
+.blurb-img1 {
+  background-image: url(../img-story-2.png);
+}
+
+.blurb-img2 {
+  background-image: url(../img-story-3.png)
+}
+
+.news4 h1 {
+  margin-top: 0;
+}
+
+.news5-img {
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  background-image: url(../img-story-1.png);
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.NewsBites h2 {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.bites span {
+  display: block;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  color: dimgray;
+  padding: 11px 20px;
+  background-color: whitesmoke;
+  border-bottom: 1px solid black;
+}
+
+/* END BODY STYLING */
+
+/* BEGIN FOOTER STYLING */
+
+footer {
+  display: flex;
+  height: 300px;
+  margin-top: 78px;
+  font-family: Verdana, sans-serif;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: mediumaquamarine;
+}
+
+#footer-myt {
+  font-family: Georgia, serif;
+  color: white;
+  font-weight: bold;
+  border-right: 2px solid white;
+  padding-right: 25px;
+}
+
+footer div p, footer nav span a {
+  font-size: 12px;
 }
